--- a/source/_posts/大语言模型应用.md
+++ b/source/_posts/大语言模型应用.md
@@ -1,5 +1,5 @@
 ---
-title: 大语言模型应用程序开发手册
+title: 大语言模型应用
 date: 2023-07-09 15:07:31
 categories: 学习日志
 tags:
@@ -19,6 +19,10 @@ AI应用=大语言模型+交互+记忆+多模态
 当然，现在主打一个提示工程（prompt engineering）。大模型才是长期记忆力，向量数据库是短期记忆。可能由更多模型组成的交互群体记忆会更牛逼。
 
 <!--more-->
+
+## [AI Agent](https://lilianweng.github.io/posts/2023-06-23-agent/)
+
+规划（Planning）、 记忆（Memory）和工具使用（Tool Use）
 
 ## 应用框架
 
